--- a/ProjNotes.Rmd
+++ b/ProjNotes.Rmd
@@ -77,6 +77,32 @@ source("Scripts/dataRead_immunity.R", local = knitr::knit_global())
 head(data[[2]])
 ```
 
+###Remove Non-coding Elements
+
+There are some codon alignments (noncanon) in the midst that were based on non-coding transcripts. For the purposes of stringency I will be reomving these from the analysis.
+
+```{r}
+imm.nc <- read.table("Genome_Misc/ImmRun_noncoding_list.txt")
+gene<-strsplit(as.character(imm.nc$V1),".",fixed = T)
+imm.nc$Gene<-sapply(gene,"[",1)
+imm.nc$V1 <- NULL
+imm.nc$Gene <- as.factor(imm.nc$Gene)
+head(imm.nc)
+```
+
+```{r}
+
+for (i in 1:length(data)){
+  data[[i]]$Gene <- as.factor(data[[i]]$Gene)
+  data[[i]] <- data[[i]][!data[[i]]$Gene %in% imm.nc$Gene,]
+}
+
+
+data[[2]][grep("LOC113218526", data[[2]]$Gene),]
+```
+
+
+
 ###Tests of significance
 
 SigTest.R uses the LRT scores and a Chi square distribution (one-tailed, one degree of freedom) to produce pvalues. Pvalues below 0.05 are considered significant (before correction for multiple testing).
@@ -122,6 +148,7 @@ source("Scripts/dataReadandTest_random.R", local = knitr::knit_global())
 head(data[[4]])
 ```
 
+
 ## Compare Immunity and Random
 
 First off I'm going to combine the random and immune data and put them back into a list of dataframes.
@@ -131,6 +158,10 @@ data <- rbind(data.imm, data.ran)
 write.table(data, "output/CodeML_BranchSiteAnalysis_CompleteResults.tsv", sep="\t", row.names=F, quote=F)
 
 data <- split(data, f = data$SocOrigin)
+for (i in 1:length(data)){
+  data[[i]]$Class <- as.factor(data[[i]]$Class)
+}
+
 summary(data[[5]])
 ```
 
@@ -163,6 +194,7 @@ p.results
 A couple of some near significant differences, but no hits otherwise. 
 
 And for the adjusted pvalues ...
+
 
 ```{r}
 source("Scripts/adjFisher.R", local = knitr::knit_global())
@@ -216,18 +248,18 @@ From this I should get a distribution with other descriptive statistics includin
 The script has been written so that 100,000 iterations x social origin x class of gene (canon / noncanon) iterations will take place, with results being stored in boot.results. Off to make a cup of tea.
 
 ```{r}
-#source("Scripts/bootstrap.R", local = knitr::knit_global())
+source("Scripts/bootstrap.R", local = knitr::knit_global())
 ```
 
 ```{r}
-#boot.results
+boot.results
 ```
 
 If there are any issues (as there has been as of now, 12th December, where my laptop shut down unexpectedly and I lost all environment objects), it is not feasible to run this again. Instead I will read in boot.results from the results file already produced.
 
 ```{r}
-boot.results <- read.table("output/BootStrapResults.tsv", header = T)
-boot.results
+#boot.results <- read.table("output/BootStrapResults.tsv", header = T)
+#boot.results
 ```
 
 
@@ -236,7 +268,7 @@ So, as in the case of the Fisher's test and the Chisq simulated tests, there app
 That took a full 2 hrs to run (tbf it was 18 million iterations in total) and so I need to have this saved asap.
 
 ```{r}
-#write.table(boot.results, "output/BootStrapResults.tsv", row.names = F, quote = F, sep = "\t")
+write.table(boot.results, "output/BootStrapResults.tsv", row.names = F, quote = F, sep = "\t")
 ```
 
 ##Evolutionary Rate
@@ -349,7 +381,7 @@ group_by(omega, Class) %>%
 
 
 ```{r}
-install.packages("ggpubr")
+#install.packages("ggpubr")
 library("ggpubr")
 ```
 
@@ -374,4 +406,5 @@ kruskal.test(dN.dS ~ Class, data = omega)
 ```
 
 And there we have it. Non significant. All the shock.
+
 
