--- a/Solitary_Analysis.Rmd
+++ b/Solitary_Analysis.Rmd
@@ -194,35 +194,7 @@ chi.sol.adj.results
 
 Hmm. Imm versus random in AllSol is sig, and Can versus random is significant in AllSol and Habro still. 
 
-####Bootstrapping Approach
-
-Bootstrapping is a resampling technique to estimate statistics on a population by sampling a dataset with replacement.
-
-See my original notes for more.
-
-The script has been written so that 100,000 iterations x social origin x class of gene (canon / noncanon) iterations will take place, with results being stored in boot.results. Off to make a cup of tea.
-
-```{r}
-source("Scripts/bootstrapSol.R", local = knitr::knit_global())
-```
-
-```{r}
-boot.sol.results
-```
-
-12th Dec - Mac shut down unexpectedly and I lost the project environment. I do not want to run this again for an hour so I will populate the object with the results from the last run.
-
-```{r}
-#boot.sol.results <- read.table("output/Sol_BootStrapResults.tsv", header = T)
-#boot.sol.results
-```
-
-
-
-```{r}
-write.table(boot.sol.results, "output/Sol_BootStrapResults.tsv", row.names = F, quote = F, sep = "\t")
-```
-
+See Bootstrap.rmd for bootstrap approach.
 
 ##Significant ? 
 
