--- a/Proj0Nov21.Rmd
+++ b/Proj0Nov21.Rmd
@@ -14,6 +14,7 @@ library("ggpubr")
 library("FSA")
 library("stringr")
 library("dplyr")
+library("AICcmodavg")
 ```
 
 
@@ -790,12 +791,390 @@ x <- nrow(data.sig[data.sig$TwoHitCheck == "Fail" | data.sig$ThreeHitCheck == "F
 (x / nrow(data.sig))*100
 ```
 
-Only 8.9% are to be completely considered uncertain ? I mean that is great if that's the case but may be worth a quick manual check.
+30% seems better than my original 8.9%. As much as it would nice to be the case.
+
+
+##GC Content
+
+I incorporated average GC content into the master aln file I read in at the beginning but I have GC information per species that may be worth looking into 
 
 ```{r}
-nrow(data.sig[data.sig$TwoHitCheck == "Fail",])
-nrow(data.sig[data.sig$ThreeHitCheck == "Fail",])
-nrow(data.sig[data.sig$TwoHitCheck == "Fail" | data.sig$ThreeHitCheck == "Fail",])
-nrow(data.sig)
+gc <- read.table("input/GC/gc_Content.tsv", header = T, sep = "\t")
+head(gc)
 ```
+
+I can't play with plots with the data in this format.
+
+I need to loop through the species, using species name to extract columns. I can then paste the species name next to the reads. I'll make a 3column dataframe per species with gene/ GC/ and species / columns then combine at the end.
+
+```{r}
+species <- names(gc[,3:13])
+
+spec.list <- vector(mode = "list", length = length(species))
+
+for (i in 1:length(species)){
+  one <- gc[[species[i]]]
+  two <- as.data.frame(cbind(gc[,1], one))
+  two$Species <- paste(species[i])
+  names(two)[1:2] <- c("Gene", "GC")
+  spec.list[[i]] <- two
+}
+
+gc2 <- bind_rows(spec.list)
+gc2$GC <- as.numeric(gc2$GC)
+tail(gc2)
+```
+
+```{r}
+ggplot(data = gc2, aes(x = Species, y = GC)) +
+  geom_boxplot()
+```
+
+```{r}
+elaboration2 <- c("Amel", "Aflo", "Mqua")
+origin2 <- c("Bimp", "Bter", "Ccal", "Emex", "Lalb")
+solitary2 <- c("Dnov", "Mrot", "Hlab")
+
+gc2$BranchTest[gc2$Species %in% elaboration2] <- "Elaboration of Sociality"
+gc2$BranchTest[gc2$Species %in% origin2] <- "Origin of Sociality"
+gc2$BranchTest[gc2$Species %in% solitary2] <- "Solitary"
+
+head(gc2)
+```
+```{r}
+ggplot(data = gc2, aes(x = Species, y = GC, fill = BranchTest)) +
+  geom_boxplot()
+```
+
+```{r}
+gc2$Sociality[gc2$Species == "Amel" | gc2$Species == "Aflo" | 
+                gc2$Species == "Mqua"] <- "Complex Eusocial"
+gc2$Sociality[gc2$Species == "Bter" | gc2$Species == "Bimp"] <- "Simple Eusocial"
+gc2$Sociality[gc2$Species == "Ccal" | gc2$Species == "Lalb" |
+                gc2$Species == "Emex"] <- "Simple (facultative)"
+gc2$Sociality[gc2$Species == "Dnov" | gc2$Species == "Hlab" |
+                gc2$Species == "Mrot"] <- "Solitary"
+```
+
+```{r}
+ggplot(data = gc2, aes(x = Species, y = GC, fill = Sociality)) +
+  geom_boxplot()
+```
+
+What's the average GC content saying ? 
+
+```{r}
+head(data.df)
+one <- data.df[,c(1,10)]
+one$Species <- "All Species"
+names(one)[2] <- "GC"
+one$Sociality <- "All"
+one$BranchTest <- "NA"
+
+gc3 <- rbind(gc2, one)
+tail(gc3)
+```
+```{r}
+gc3$Species <- factor(gc3$Species, levels=c("All Species", "Dnov", "Hlab", "Mrot",
+                                                "Ccal", "Emex", "Lalb", 
+                                                "Bimp", "Bter",
+                                                "Aflo", "Amel", "Mqua"))
+
+ggplot(data = gc3, aes(x = Species, y = GC, fill = Sociality)) +
+  geom_boxplot()
+```
+
+
+```{r}
+ggplot(gc2, aes(x=GC)) + 
+            geom_histogram(aes(y = ..density..), binwidth=.25, colour="black", fill="white") +
+            stat_function(fun = dnorm, lwd = 2, col = 'red', 
+                          args = list(mean = mean(gc2$GC), sd = sd(gc2$GC)))
+```
+Ooh. Yay
+
+```{r}
+ggplot(gc2, aes(sample = GC)) + stat_qq()
+```
+```{r}
+soc.aov <- aov(GC ~ Sociality, data = gc2)
+summary(soc.aov)
+```
+
+What about the origins and elaboration ?
+
+```{r}
+branch.aov <- aov(GC ~ BranchTest, data = gc2)
+summary(branch.aov)
+```
+
+Hmm. But what's more informative ? 
+
+```{r}
+plot(soc.aov)
+```
+
+Are they linked ?
+
+```{r}
+socbranch.aov <- aov(GC ~ Sociality + BranchTest, data = gc2)
+```
+
+
+
+```{r}
+model.set <- list(soc.aov, branch.aov, socbranch.aov)
+model.names <- c("Social", "Branch Tested", "Sociality and Branch")
+
+aictab(model.set, modnames = model.names)
+```
+
+Ok so its sociality.
+
+```{r}
+plot(soc.aov)
+```
+
+Post-hoc time
+
+```{r}
+TukeyHSD(soc.aov)
+```
+
+So everything's different to everything else. 
+
+If I was to code sociality, what would the relationship look like ?
+
+```{r}
+gc2$Sociality2[gc2$Sociality == "Simple (facultative)"] <- 1
+gc2$Sociality2[gc2$Sociality == "Simple Eusocial"] <- 2
+gc2$Sociality2[gc2$Sociality == "Complex Eusocial"] <- 3
+gc2$Sociality2[gc2$Sociality == "Solitary"] <- 0
+gc2$Sociality2 <- as.numeric(gc2$Sociality2)
+
+head(gc2)
+```
+
+```{r}
+GC_means <- gc2 %>% 
+  group_by(BranchTest) %>% 
+  summarize(mean_GC=mean(GC)) 
+GC_means
+```
+
+```{r}
+ggplot(GC_means, aes(x=BranchTest, y=mean_GC)) +
+  geom_bar(stat="identity") 
+```
+
+##GC vs dNdS / Selection
+###dNdS
+
+Is evolutionary rate and gc content correlated? 
+
+First, can I use parametric tests to check average GC per gene against dNdS per gene ? (I have a feeling dNdS may not be....)
+
+GC first
+
+```{r}
+ggplot(verse, aes(x=GeneAverage)) + 
+    geom_histogram(aes(y = ..density..), binwidth=.25, colour="black", fill="white") +
+    stat_function(fun = dnorm, lwd = 2, col = 'red', 
+            args = list(mean = mean(verse$GeneAverage), sd = sd(verse$GeneAverage)))
+
+```
+Hmm. Pretty normally distributed ....
+
+```{r}
+ggplot(verse, aes(sample = GeneAverage)) + stat_qq()
+```
+
+Kiinda. 
+
+```{r}
+work4 <- verse
+work4$logGC <- log(work4$GeneAverage)
+
+ggplot(work4, aes(x=logGC)) + 
+    geom_histogram(aes(y = ..density..), binwidth=.25, colour="black", fill="white") +
+    stat_function(fun = dnorm, lwd = 2, col = 'red', 
+            args = list(mean = mean(work4$logGC), sd = sd(work4$logGC)))
+```
+
+Ok sweet. Now for dNdS
+
+```{r}
+ggplot(work4, aes(x=dN.dS)) + 
+    geom_histogram(aes(y = ..density..), binwidth=.25, colour="black", fill="white") +
+    stat_function(fun = dnorm, lwd = 2, col = 'red', 
+            args = list(mean = mean(work4$dN.dS), sd = sd(work4$dN.dS)))
+```
+
+Eeek.
+
+```{r}
+work4$logOmega <- log(work4$dN.dS)
+
+ggplot(work4, aes(x=logOmega)) + 
+    geom_histogram(aes(y = ..density..), binwidth=.25, colour="black", fill="white") +
+    stat_function(fun = dnorm, lwd = 2, col = 'red', 
+            args = list(mean = mean(work4$logOmega), sd = sd(work4$logOmega)))
+
+```
+
+
+Better but still skewed. So maybe not parametric.
+
+```{r}
+cor.test(work4$logOmega, work4$logGC, method = "kendall")
+```
+
+```{r}
+ggplot(work4, aes(x = logOmega, y = logGC)) +
+  geom_point(aes(color = Function, alpha = Immune, shape = Class)) +
+  scale_alpha(guide = "none") +
+  scale_color_manual(values = c("gray",
+                                "#56B4E9",
+                               "violet",
+                               "#009E73",
+                                "#F0E442"), 
+                     name = "Gene Class") +
+   geom_line(stat="smooth",method = "lm",
+              size = .5,
+              linetype ="dashed",
+              alpha = 0.5) + 
+        xlab("log dN/dS ratio") +
+        ylab("log GC content")
+
+```
+
+Let's try this since I've just found
+
+```{r}
+ggplot(work4, aes(y=logGC, x=logOmega)) +
+  geom_point(cex=1) +
+  stat_density_2d(aes(fill = ..level..), geom = "polygon", colour="white") +
+  scale_y_continuous("Sale Price", breaks = seq(0, 600000, by = 100000),
+                     labels = str_c(seq(0, 600, by = 100), "k")) +
+  theme(legend.position = "none")
+```
+
+```{r}
+ggplot(work4, aes(y=logGC, x=logOmega, color = Class)) +
+  geom_point(cex=1, alpha=.2) +
+  geom_density_2d() +
+  scale_y_continuous("logOmega", breaks = seq(0, 400000, by = 100000), labels = str_c(seq(0, 400, by = 100), "k")) +
+  scale_color_discrete(name = "")
+```
+
+
+
+Last little look
+
+```{r}
+mod.ogc <- lm(logOmega ~ logGC, data = work4)
+summary(mod.ogc)
+```
+
+
+```{r}
+int <- mod.ogc$coefficients["(Intercept)"]
+slope <- mod.ogc$coefficients["logGC"]
+
+plot(logOmega ~ logGC,
+     data = work4,
+     pch=1,
+     xlab = "log dN/dS", 
+     ylab = "log GC Content")
+abline(int, slope,
+       lty=1, lwd=2, col="blue") 
+```
+
+As evolutionary rate increases, GC content tends to slightly decrease.
+
+Though it's interesting to note that non-canon genes and receptor genes are in the uppermost of both higher GC content and higher omega value. 
+
+###Selection
+
+Right. So how am I going to attack this one. 
+
+Start off with all genes, all branch tests, average GC content per gene and the adj pvalue.
+
+Can approach this two ways - add selection as boolean variable and remove all other information then just assess differences between under selection or not, else add a gene as under selection if it is *ever* under selection across the tests.
+
+
+```{r}
+work5 <- data.df
+work5$Selection <- ifelse(work5$adj_pvalue < 0.05, "Under Selection", "Not Under Selection")
+work5$Selection <- as.factor(work5$Selection)
+
+ggplot(data = work5, aes(x = Selection, y = GeneAverage))+
+  geom_boxplot()
+```
+
+Oh, interesting.
+
+```{r}
+ggplot(data = work5, aes(x = Selection, y = GeneAverage))+
+  geom_boxplot() +
+  facet_wrap(~ BranchTested) +
+  scale_x_discrete(labels = function(x) str_wrap(x, width = 10)) 
+```
+
+But ...... these are the gene averages, not the real averages of the real data ....
+
+Oh god this is going to be so tricky.
+
+Right so, first, let's get the averages per branch tests from the original gc table.
+
+```{r}
+head(gc)
+
+gc4 <- gc
+gc4 <- gc4[!duplicated(gc4),]
+gc4$AvgElaboration <- rowMeans(gc4[, c(3:4,12)])
+gc4$AvgOrigin <- rowMeans(gc4[, c(3:7,9,11:12)])
+gc4$AvgSolitary <- rowMeans(gc4[, c(8,10,13)])
+head(gc4)
+```
+
+```{r}
+one <- c("AvgElaboration", "AvgOrigin", "AvgSolitary")
+two <- c("Elaboration of Sociality", "Origin of Sociality", "Solitary")
+key <- data.frame(one,two)
+key$one <- as.factor(key$one)
+key$two <- as.factor(key$two)
+
+work5$AvgBranch <- paste(" ")
+
+for (i in 1:nrow(work5)){
+  b <- work5[i,17]
+  t <- key$one[key$two == paste(b)]
+  g <- work5[i,1]
+  y <- gc4[gc4$Gene == paste(g),]
+  avg <- y[[paste(t)]]
+  work5[i,19] <- paste(avg)
+}
+
+work5$AvgBranch <- as.numeric(work5$AvgBranch)
+
+head(work5)
+```
+
+Try this again
+
+```{r}
+ggplot(data = work5, aes(x = Selection, y = AvgBranch))+
+  geom_boxplot() +
+  facet_wrap(~ BranchTested) +
+  scale_x_discrete(labels = function(x) str_wrap(x, width = 10)) 
+```
+
+```{r}
+ggplot(work5, aes(x=Selection, y=AvgBranch, fill=BranchTested)) +
+  geom_boxplot()
+```
+
+
+
 
